tolk-tester/tests/invalid-declaration/err-1973.tolk
fun int.nothing(zero: int, self: slice) {
}

/**
@compilation_should_fail
@stderr `self` can only be the first parameter of a method
 */
